--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hygulptest",
+  "name": "week6projrct",
   "version": "1.0.0",
   "description": "learning gulp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "coral",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
@@ -16,5 +16,19 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0"
-  }
+  },
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cocoral/WeekSix.git"
+  },
+  "keywords": [
+    "yummly"
+  ],
+  "bugs": {
+    "url": "https://github.com/cocoral/WeekSix/issues"
+  },
+  "homepage": "https://github.com/cocoral/WeekSix#readme"
 }
